--- a/src/main/resources/templates/uploadForm.html
+++ b/src/main/resources/templates/uploadForm.html
@@ -21,7 +21,7 @@
 				<tr><td>2- File to upload:</td>
 					<td><input type="file" name="file" /></td></tr>
 				<tr><td>3- Flag to download:</td>
-					<td><input type="checkbox" name="download" value="${false}"/></td></tr>
+					<td><input type="checkbox" name="download"/></td></tr>
 				<tr>
 					<td></td>
 					<td><input type="submit" value="Upload" onclick="submitForm()" id="submit-button"/></td>
